--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main class='main'>
       <nav class='navBar'>
-        <h1>Aditya Gusain Portfolio</h1>
+        <h1>Rithvik S Portfolio</h1>
         <div class='navigationMenu'>
           <a href="#aboutMe">About Me</a>
           <a href="#skills">Skills</a>
@@ -23,8 +23,8 @@
         class='profileImage'
         src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOALqcMjby_cOSIr-3GFWRO_zY_j0qcB4zRA&usqp=CAU'/>
         <div class='herosectionDetails'>
-          <h1>Aditya Gusain</h1>
-          <h3>Full-Stack Developer at ShapeAI</h3>
+          <h1>Rithvik S</h1>
+          <h3>Full-Stack Developer at GCT</h3>
         </div>
       </section>
       <section class='aboutMe' id='aboutMe'>
